--- a/sole-pay-landing/package.json
+++ b/sole-pay-landing/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "import.js",
   "scripts": {
-    "dev": "parcel ./index.html",
-    "prod": "parcel build /index.html"
+    "dev": "parcel ./index.html"
   },
   "keywords": [],
   "author": "",
