--- a/sole-pay-landing/package.json
+++ b/sole-pay-landing/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "import.js",
   "scripts": {
-    "dev": "parcel ./index.html"
+    "dev": "parcel ./index.html",
+    "build": "parcel build ./index.html"
   },
   "keywords": [],
   "author": "",
