--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -6,11 +6,11 @@ server{
     location /{
         root /usr/share/nginx/html/dist;
         index index.html;
-        try_files $uri $uri/ /index.html
+        try_files $uri $uri/ /index.html;
     }
     location /fill {
         root /usr/share/nginx/html/build;
         index index.html;
-        try_files $uri $uri/ /index.html
+        try_files $uri $uri/ /index.html;
     }
 }
