--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -3,7 +3,7 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location /{
+    location = /{
         root /usr/share/nginx/html/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
