--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -3,8 +3,8 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location = /{
-        root /usr/share/nginx/html/dist;
+    location /{
+        root /usr/share/nginx/html/build;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
