--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -4,12 +4,12 @@ server{
         return 200 'your health configuration is running enjoy ';
     }
     location /{
-        root /usr/share/nginx/html/build;
+        root /usr/share/nginx/html/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    location  = /fill {
-        root /usr/share/nginx/html/build;
+    location /fill {
+        alias /usr/share/nginx/html/build;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
