--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -8,7 +8,7 @@ server{
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    location /fill {
+    location /app {
         alias /usr/share/nginx/html/build;
         index index.html;
         try_files $uri $uri/ /index.html;
