--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -9,7 +9,7 @@ server{
         try_files $uri $uri/ /index.html;
     }
     location /app {
-        alias /usr/share/nginx/html/build;
+        root /usr/share/nginx/html/build/;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
