--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -8,8 +8,8 @@ server{
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    location /app {
-        root /usr/share/nginx/html/build/;
+    location /app/ {
+        alias /usr/share/nginx/html/build/;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
