--- a/nginx/frontend.conf
+++ b/nginx/frontend.conf
@@ -8,8 +8,8 @@ server{
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    location /app/ {
-        alias /usr/share/nginx/html/build/;
+    location /build {
+        root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
