--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -8,4 +8,9 @@ server{
         index index.html;
         try_files $uri $uri/ /index.html;
     }
+    location /build {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
