--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,13 +3,13 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location /{
-        root /usr/share/nginx/html/dist;
+    location /build/ {
+        root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    location /build {
-        root /usr/share/nginx/html;
+    location /{
+        root /usr/share/nginx/html/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
