--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,14 +3,12 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location /build/ {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
     location /{
         root /usr/share/nginx/html/dist;
         index index.html;
-        try_files $uri $uri/ /index.html;
+    }
+    location /app/ {
+        alias /usr/share/nginx/html/build/;
+        index index.html;
     }
 }
