--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,8 +3,9 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
+    root /usr/share/nginx/html;
     location /{
-        root /usr/share/nginx/html/dist;
+        alias /usr/share/nginx/html/dist/;
         index index.html;
     }
     location /app/ {
