--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,13 +3,8 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    root /usr/share/nginx/html;
-    location /{
-        alias /usr/share/nginx/html/dist/;
-        index index.html;
-    }
     location /app/ {
-        alias /usr/share/nginx/html/build/;
+        root /usr/share/nginx/html/build/;
         index index.html;
     }
 }
