--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,8 +3,14 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location /{
-        root /usr/share/nginx/html/build/;
+    location / {
+        root /usr/share/nginx/html;
         index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+    location /fill{
+        root /usr/share/nginx/html/dist;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
