--- a/nginx/landing.conf
+++ b/nginx/landing.conf
@@ -3,7 +3,7 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy ';
     }
-    location / {
+    location = /app {
         root /usr/share/nginx/html/build;
         index index.html;
         try_files $uri $uri/ /index.html;
