--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -4,9 +4,8 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy !';
     }
-    root /usr/share/nginx/html;
-    location /fill {
+    root /usr/share/nginx/html/dist;
+    location /fill/ {
         alias /usr/share/nginx/html/build/;
-        try_files $uri $uri/ /index.html;
     }
 }
