--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -4,8 +4,12 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy !';
     }
-    
-    location /build {
-        root /usr/share/nginx/html/build;
+
+    location /build/ {
+        alias /usr/share/nginx/html/;
+    }
+
+    location / {
+       alias /usr/share/nginx/html/dist/;
     }
 }
