--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -6,7 +6,7 @@ server{
     }
 
     location /build/ {
-        alias /usr/share/nginx/html/build/;
+        alias /usr/share/nginx/html/;
     }
 
     location / {
