--- a/sole-pay-front/package.json
+++ b/sole-pay-front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tailwiind-pixabay-gallery",
-  "hostpath": ".",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
