--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -5,7 +5,7 @@ server{
         return 200 'your health configuration is running enjoy !';
     }
 
-    location /build/ {
+    location /build {
         alias /usr/share/nginx/html/;
     }
 
