--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -1,15 +1,17 @@
 server{
     listen 80;
-    index index.html;
+
     location = /health {
         return 200 'your health configuration is running enjoy !';
     }
 
-    location /build {
+   location /build {
         alias /usr/share/nginx/html/;
+        index index.html;
+        try_files $uri /index.html ;
     }
-
     location / {
+       index index.html;
        alias /usr/share/nginx/html/dist/;
     }
 }
