added some updates

--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -8,10 +8,11 @@ server{
    location /build {
         alias /usr/share/nginx/html/;
         index index.html;
-        try_files $uri /index.html ;
-    }
+        error_page 404 = index.html;
+        }
     location / {
        alias /usr/share/nginx/html/dist/;
        index index.html;
-    }
+       error_page 404 = index.html;
+   }
 }
