added fix in nginx conf file

--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -8,11 +8,12 @@ server{
    location /build {
         alias /usr/share/nginx/html/;
         index index.html;
-        error_page 404 = index.html;
+        error_page 404 = /build/index.html;
         }
     location / {
        alias /usr/share/nginx/html/dist/;
        index index.html;
-       error_page 404 = index.html;
+       error_page 404 = /index.html;
    }
 }
+
