--- a/sole-pay-front/package.json
+++ b/sole-pay-front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tailwiind-pixabay-gallery",
-  "homepage": ".",
+  "homepage": "/app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "history": "^5.0.0",
     "html-to-image": "^1.6.2",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
