--- a/nginx/front.conf
+++ b/nginx/front.conf
@@ -5,10 +5,10 @@ server{
         return 200 'your health configuration is running enjoy !';
     }
 
-   location /build {
+   location /app {
         alias /usr/share/nginx/html/;
         index index.html;
-        error_page 404 = /build/index.html;
+        error_page 404 = /app/index.html;
         }
     location / {
        alias /usr/share/nginx/html/dist/;
