--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -4,7 +4,9 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy !';
     }
-
+    location /.well-known/acme-challenges/{
+        root /letsencrypt/;
+    }
    location /app {
         alias /usr/share/nginx/html/;
         index index.html;
