--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -12,7 +12,7 @@ server{
         index index.html;
         error_page 404 = /app/index.html;
         }
-    location / {
+    location = / {
        alias /usr/share/nginx/html/dist/;
        index index.html;
        error_page 404 = /index.html;
