--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -4,7 +4,7 @@ server{
     location = /health {
         return 200 'your health configuration is running enjoy !';
     }
-    location /.well-known/acme-challenges/{
+    location ^~ /.well-known {
         root /letsencrypt/;
     }
    location /app {
@@ -18,4 +18,3 @@ server{
        error_page 404 = /index.html;
    }
 }
-
