--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -1,5 +1,11 @@
 server{
-    listen 80;
+    #listen 80;
+
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server ;
+    server_name solepay.ml;
+    ssl_certificate /etc/letsencrypt/live/solepay.ml/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/solepay.ml/privkey.pem;
 
     location = /health {
         return 200 'your health configuration is running enjoy !';
