proxy the backend

--- a/nginx/https.conf
+++ b/nginx/https.conf
@@ -23,4 +23,7 @@ server{
        index index.html;
        error_page 404 = /index.html;
    }
+    location /pay_service/ {
+        proxy_pass http://solepay.ml:4000/;
+   }
 }
