--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -1,7 +1,7 @@
 server{
 
     listen 80 default_server;
-    server_name solepay.ml;
+    server_name ${DOMAIN};
     return 301 https://$server_name$request_uri;
 
 }
