adding custom domain in conf files

--- a/nginx/https.conf
+++ b/nginx/https.conf
@@ -3,9 +3,9 @@ server{
 
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server ;
-    server_name solepay.ml;
-    ssl_certificate /etc/letsencrypt/live/solepay.ml/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/solepay.ml/privkey.pem;
+    server_name ${DOMAIN};
+    ssl_certificate /etc/letsencrypt/live/$server_name/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$server_name/privkey.pem;
 
     location = /health {
         return 200 'your health configuration is running enjoy !';
@@ -24,6 +24,6 @@ server{
        error_page 404 = /index.html;
    }
     location /pay_service/ {
-        proxy_pass http://solepay.ml:4000/;
+        proxy_pass http://$server_name:4000/;
    }
 }
