adding react frontend link

--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -1,7 +1,21 @@
 server{
 
     listen 80 default_server;
-    server_name ${DOMAIN};
-    return 301 https://$server_name$request_uri;
+    server_name ip172-19-0-18-cgi32rae69v0009glgdg-80.direct.labs.play-with-docker.com;
+    
+    location = /health {
+        default_type text/plain;
+        return 200 'your sole pay app is running' ;
+    }
+    location /app {
+        alias /usr/share/nginx/html/;
+        index index.html;
+        error_page 404 = /app/index.html;
+    }
+    location / {
+       alias /usr/share/nginx/html/dist/;
+       index index.html;
+       error_page 404 = /index.html;
+   }
 
 }
