adding backend service in nginx http

--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -17,5 +17,8 @@ server{
        index index.html;
        error_page 404 = /index.html;
    }
+   location /pay_service/ {
+        proxy_pass http://$server_name:4000/;
+   }
 
 }
