--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -1,7 +1,7 @@
 server{
 
     listen 80 default_server;
-    server_name ip172-19-0-18-cgi32rae69v0009glgdg-80.direct.labs.play-with-docker.com;
+    server_name ${SERVER_NAME};
     
     location = /health {
         default_type text/plain;
