--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -18,7 +18,7 @@ server{
        error_page 404 = /index.html;
    }
    location /pay_service/ {
-        proxy_pass http://$server_name:4000/;
+        proxy_pass http://backend:4000/;
    }
 
 }
